# wp-data-fmt

./: .gitignore  CHANGELOG.md  Cargo.toml  MIGRATION_GUIDE_v0.2.md  README.md  REFACTOR_REPORT_v0.2.md
.claude/: settings.local.json
src/: csv.rs  formatter.rs  json.rs  kv.rs  lib.rs  proto.rs  raw.rs  sql.rs
tests/: new_api_demo.rs  nginx_csv_snapshot.rs  nginx_json_snapshot.rs  nginx_kv_snapshot.rs  nginx_proto_txt_snapshot.rs  nginx_raw_snapshot.rs  nginx_sql_snapshot.rs  test_cur_name.rs
